--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <h1 class="hello-text">Hello!</h1>
     <h2 class="typewriter hidden">Who is Jake?</h2>
     <h3 class="typewriter2 hidden">Jake is</h3>
-    <h4 class="typewriteralt hidden"></h4> <!-- alternating text line-->
+    <h4 class="auto_type hidden"></h4> <!-- alternating text line-->
     <a href="Jake-portfolio.html" id="learn-more-btn">Learn More</a>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="decorations&animations.js"></script>
 </body>
 </html>
+
